--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <link rel="stylesheet" href="./css/main.min.css" />
   </head>
   <body>
-    <header class="site-header">
+    <!---- <header class="site-header">
       <div class="container header-container">
         <nav class="header-nav">
           <a href="./index.html" class="logo link"><span class="colortext"> Web</span>Studio </a>
@@ -51,7 +51,7 @@
           </li>
         </ul>
       </div>
-    </header>
+    </header>-->
     <main>
       <section class="hero overlay">
         <div class="container">
@@ -110,7 +110,7 @@
           </ul>
         </div>
       </section>
-      <section class="work section">
+      <!---- <section class="work section">
         <div class="container work__container">
           <h2 class="work__title">Чем мы занимаемся</h2>
           <ul class="work__list">
@@ -129,8 +129,8 @@
             </li>
           </ul>
         </div>
-      </section>
-      <section class="team section">
+      </section>-->
+      <!---- <section class="team section">
         <div class="container team__container">
           <h2 class="team__title">Наша команда</h2>
           <ul class="team__list">
@@ -376,7 +376,7 @@
             </li>
           </ul>
         </div>
-      </section>
+      </section>-->
       <section class="clients section">
         <div class="container clients__container">
           <h2 class="clients__title">Постоянные клиенты</h2>
@@ -463,7 +463,7 @@
         </div>
       </section>
     </main>
-    <footer class="footer">
+    <!---- <footer class="footer">
       <div class="footer-container container">
         <div>
           <a href="./index.html" class="footer-logo link"
@@ -569,7 +569,7 @@
           </form>
         </div>
       </div>
-    </footer>
+    </footer>-->
     <!--Modal window-->
     <div class="backdrop is-hidden" data-modal>
       <div class="modal">
