--- a/index.html
+++ b/index.html
@@ -110,26 +110,41 @@
           </ul>
         </div>
       </section>
-      <!---- <section class="work section">
+      <section class="work section">
         <div class="container work__container">
           <h2 class="work__title">Чем мы занимаемся</h2>
           <ul class="work__list">
             <li class="work__item">
-              <img src="./images/pfoto1.jpg " alt="Пишем код" width="370" />
+              <img
+                srcset="./images/pfoto1.jpg 1x, ./images\work\1-2x.jpg 2x"
+                src="./images/pfoto1.jpg "
+                alt="Пишем код"
+                width="370"
+              />
               <p class="work__text">Десктопные приложения</p>
             </li>
 
             <li class="work__item">
-              <img src="./images/photo2.jpg" alt="Создаем Приложения" width="370" />
+              <img
+                srcset="./images/photo2.jpg 1x, ./images\work\2-2x.jpg 2x"
+                src="./images/photo2.jpg"
+                alt="Создаем Приложения"
+                width="370"
+              />
               <p class="work__text">Мобильные приложения</p>
             </li>
             <li class="work__item">
-              <img src="./images/photo3.jpg" alt="Делаем дизайн" width="370" />
+              <img
+                srcset="./images/photo3.jpg 1x, ./images\work\3-2x.jpg 2x"
+                src="./images/photo3.jpg"
+                alt="Делаем дизайн"
+                width="370"
+              />
               <p class="work__text">Дизайнерские решения</p>
             </li>
           </ul>
         </div>
-      </section>-->
+      </section>
       <section class="team section">
         <div class="container team__container">
           <h2 class="team__title">Наша команда</h2>
@@ -350,7 +365,7 @@
                 </ul>
               </div>
             </li>
-            <li class="tem__item">
+            <li class="team__item">
               <img
                 srcset="
                   ./images\team\deck-270designer.jpg   270w,
@@ -512,7 +527,7 @@
         </div>
       </section>
     </main>
-    <!---- <footer class="footer">
+    <footer class="footer">
       <div class="footer-container container">
         <div>
           <a href="./index.html" class="footer-logo link"
@@ -618,7 +633,7 @@
           </form>
         </div>
       </div>
-    </footer>-->
+    </footer>
     <!--Modal window-->
     <div class="backdrop is-hidden" data-modal>
       <div class="modal">
